# owlreads

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  makefile  package-lock.json  pyproject.toml
.github/workflows/: lint.yml
core/: Dockerfile  manage.py  routers.py
core/api/: serializers.py  urls.py  views.py
core/auth/: views.py
core/books/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
core/books/migrations/: 0001_initial.py  0002_book_genres_review.py  0002_review.py  0003_book_genres_delete_review.py  0004_review.py
core/books/services/: google_books.py
core/collection/: apps.py  genre_catalog.py  genre_slug.py  models.py  serializers.py  signals.py  urls.py  views.py
core/collection/migrations/: 0001_initial.py  0002_award_type_dynamic_genres.py
core/core/utils/: collections.py  (+2 more)
core/owlreads/: asgi.py  urls.py  views.py  wsgi.py
core/scripts/: entrypoint.sh  production_data.py
core/shelves/: apps.py  models.py  serializers.py  urls.py  views.py
core/templates/: about.html  base.html  home.html
core/users/: models.py  permissions.py  serializers.py  urls.py  views.py
docker/backend/: Dockerfile  wsgi-entrypoint.sh
docker/frontend/:  init-letsencrypt.sh  Dockerfile
docs/: auth.md  contents.md  dependency.md  docker.md  googlebooks.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
scripts/: entrypoint.sh  production_data.py
(+133 files in other folders)
