[project]
name = "i-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Neha Kerung",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.isort]
multi_line_output = 5
line_length =120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]
